--- a/backend_deposit/templates/deposit/incomings_list.html
+++ b/backend_deposit/templates/deposit/incomings_list.html
@@ -6,7 +6,7 @@
 {% include 'includes/operator_menu.html' %}
 <div class="">
 {% include 'includes/switcher2.html' %}
-   <table class="table table-sm" style="font-size: medium">
+   <table class="table" style="font-size: medium; line-height: 50%; padding: .1rem .1rem .1rem .1rem">
      <thead class="thead-dark align-content-center">
      {% with request.resolver_match.view_name as view_name %}
          {% if view_name == 'deposit:incomings_filter' %}
@@ -14,6 +14,12 @@
              <a class="changelink" href="{% url 'deposit:my_filter' %}">Изменить</a>
          {% endif %}
      {% endwith %}
+
+    <form method="GET">
+        {% csrf_token %}
+     {{ search_form.as_p }}
+    <input type="submit" name="date_search" value="Найти">
+    </form>
 
      <tr>
            <th>id</th>
@@ -30,9 +36,9 @@
      </thead>
      <tbody>
          {% for incoming in page_obj %}
-         <tr>
+         <tr style="">
             <td><a class="changelink" href="{% url 'deposit:incoming_edit' incoming.id %}">{{ incoming.id }}</a></td>
-            <td>{{ incoming.register_date|date:"d.m.Y H:i" }}</td>
+            <td>{{ incoming.test }}{{ incoming.register_date|date:"d.m.Y H:i" }}</td>
             <td>{{ incoming.response_date|date:"d.m.Y H:i" }}</td>
             <td>{{ incoming.recipient }}</td>
 
@@ -45,11 +51,11 @@
             <td>
                 <form action="{% url 'deposit:incomings' %}" method="post">
                                     {% csrf_token %}
-                    <input type="text" style="font-size: medium; height: 20px" minlength="0" maxlength="12" size="9"  value="{{ incoming.birpay_id|default_if_none:""  }}" name="{{ incoming.id }}">
+                    <input type="text" style="margin-bottom: -10px; margin-top: -10px; font-size: medium; height: 20px" minlength="0" maxlength="12" size="9"  value="{{ incoming.birpay_id|default_if_none:""  }}" name="{{ incoming.id }}">
                     {% if incoming.birpay_id %}
-                      <button disabled type="submit" class="btn btn-primary btn-sm">---</button>
+                      <button disabled style="margin-bottom: -10px; margin-top: -10px; height: 25px;font-size: small" type="submit" class="btn btn-primary btn-sm">---</button>
                     {% else %}
-                      <button style="height: 25px;font-size: small; align-content: center; align-items: center; align-self: center; justify-content: center" type="submit" class="btn btn-primary btn-sm">Ok</button>
+                      <button style="margin-bottom: -10px; margin-top: -10px; height: 25px;font-size: small" type="submit" class="btn btn-primary btn-sm">Ok</button>
                     {% endif %}
                 </form>
             </td>
