--- a/backend_deposit/templates/deposit/incomings_list.html
+++ b/backend_deposit/templates/deposit/incomings_list.html
@@ -54,7 +54,7 @@
                 {% if incoming.balance %}
                     {{ incoming.balance }}
                 {% elif incoming.image %}
-                    <a class="changelink" target="_blank" href="/media/{{ incoming.image }}">Чек</a>
+                    <a target="_blank" href="/media/{{ incoming.image }}">Чек</a>
                 {% endif %}
             </td>
 
