--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -14,20 +14,23 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown ">
           <a class="nav-link dropdown-toggle {% if app_name == 'posts' %}link-danger{% endif %}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Раскрывающееся меню
+            Статистика
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'deposit:deposits' %}">ссылка 1</a></li>
-            <li><a class="dropdown-item" href="{% url 'deposit:deposits' %}">ссылка 2</a></li>
+            <li><a class="dropdown-item" href="{% url 'deposit:stats' %}">Статистика по картам</a></li>
           </ul>
         </li>
       </ul>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-          <a class="nav-link"href="{% url 'deposit:deposits_pending' %}">Депозиты</a>
-          </li>
+{#          <li class="nav-item">#}
+{#          <a class="nav-link"href="{% url 'deposit:deposits_pending' %}">Депозиты</a>#}
+{#          </li>#}
           <li class="nav-item">
           <a class="nav-link" href="{% url 'deposit:incomings' %}">Платежи</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'admin:index' %}">Админка</a>
           </li>
       </ul>
 
