--- a/backend_deposit/templates/includes/switcher2.html
+++ b/backend_deposit/templates/includes/switcher2.html
@@ -15,11 +15,19 @@
            href="{% url 'deposit:incomings_filter' %}">
           Платежи по фильтру
         </a>
-        <li class="nav-item">
+      </li>
+      <li class="nav-item">
         <a
            class="nav-link {% if view_name == 'deposit:incomings_search' %}active{% endif %}"
            href="{% url 'deposit:incomings_search' %}">
           Поиск платежей
+        </a>
+      </li>
+      <li class="nav-item">
+        <a
+           class="nav-link {% if view_name == 'deposit:trash' %}active{% endif %}"
+           href="{% url 'deposit:trash' %}">
+          Мусор
         </a>
       </li>
     </ul>
