--- a/backend_deposit/templates/deposit/trash_list.html
+++ b/backend_deposit/templates/deposit/trash_list.html
@@ -23,7 +23,7 @@
 
           <tbody>
               {% for obj in object_list %}
-                <tr class="text-end">
+                <tr class="text-start">
                   <td>{{ obj.pk }}</td>
                   <td>{{ obj.register_date }}</td>
                   <td>{{ obj.text }}</td>
