Fix paginator. Add empty url

--- a/backend_deposit/templates/includes/paginator.html
+++ b/backend_deposit/templates/includes/paginator.html
@@ -28,7 +28,13 @@
           <li class="page-item active">
             <span class="page-link">{{ i }}</span>
           </li>
-        {% else %}
+
+        {% elif i >= page_obj.number|add:-10 and i <= page_obj.number|add:10  %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+          </li>
+
+        {% elif i == page_obj.number|add:-50 or i == page_obj.number|add:50  %}
           <li class="page-item">
             <a class="page-link" href="?page={{ i }}">{{ i }}</a>
           </li>
