--- a/backend_deposit/templates/deposit/incomings_list.html
+++ b/backend_deposit/templates/deposit/incomings_list.html
@@ -29,7 +29,7 @@
 
             <p id="last_id" hidden>{{ last_id }}</p>
             <p id="filter" hidden>{{ filter }}</p>
-         {% if view_name != 'deposit:incomings_search' %}
+         {% if view_name == 'deposit:incomings' or view_name == 'deposit:incomings_filter' %}
            <div class="col-3" role="alert" id="warnings" style="padding:  6px 0 6px 0; margin: 0 0 0 10px">
             <!-- Здесь будут отображаться уведомления -->
            </div>
