--- a/backend_deposit/templates/deposit/incomings_list.html
+++ b/backend_deposit/templates/deposit/incomings_list.html
@@ -55,11 +55,16 @@
      </thead>
      <tbody>
          {% for incoming in page_obj %}
-         <tr id="pay{{ incoming.id }}"
+         <tr title="{{incoming.comment|default_if_none:'' }}" id="pay{{ incoming.id }}"
                  {% if incoming.birpay_id or not incoming.birpay_id|default_if_none:'-'%}
                  class="table-success"
                  {% endif %}>
-            <td><a class="changelink" href="{% url 'deposit:incoming_edit' incoming.id %}">{{ incoming.id }}</a></td>
+
+            <td><a class="changelink" href="{% url 'deposit:incoming_edit' incoming.id %}">{{ incoming.id }}</a>
+                {% if incoming.comment %}
+                  *
+                {% endif %}
+            </td>
             <td>{{ incoming.register_date|date:"d.m H:i" }}</td>
             <td>{{ incoming.response_date|date:"d.m H:i" }}</td>
             <td>{{ incoming.recipient }}</td>
