--- a/backend_deposit/templates/deposit/incomings_list.html
+++ b/backend_deposit/templates/deposit/incomings_list.html
@@ -88,7 +88,7 @@
                     {% if incoming.birpay_id or not incoming.birpay_id|default_if_none:'-' %}
                       <button disabled style="margin-bottom: -10px; margin-top: -10px; height: 25px;font-size: small" type="submit" class="btn btn-success btn-sm">---</button>
                     {% else %}
-                      <button style="margin-bottom: -10px; margin-top: -10px; height: 25px;font-size: small" type="submit" class="btn btn-primary btn-sm">Ok</button>
+                      <button style="margin-bottom: -10px; margin-top: -10px; height: 25px;font-size: small" type="submit" class="btn btn-warning btn-sm">Ok</button>
                     {% endif %}
                 </form>
             </td>
