--- a/backend_deposit/templates/deposit/stats.html
+++ b/backend_deposit/templates/deposit/stats.html
@@ -30,7 +30,7 @@
                   <td>{{ obj.last_id }}</td>
                   <td>{{ obj.last_date }}</td>
                   <td>{{ obj.count }}</td>
-                  <td>{{ obj.sum }}</td>
+                  <td>{{ obj.sum|floatformat:0 }}</td>
                 </tr>
               {% endfor %}
           </tbody>
@@ -39,7 +39,7 @@
     </div>
 
 
-    <div class="col-md-6">
+    <div class="col-md-auto">
 
             <table id="table" class="table w-auto table-hover table-bordered" style="font-size: medium; line-height: 100%; padding: .1rem .1rem .1rem .1rem">
 
@@ -57,10 +57,10 @@
               {% for key, value in day_reports.items %}
                 <tr class="text-end">
                   <td>{{ key|date:'d.m.Y' }}</td>
-                  <td>{{  value.all_day.pay_sum }} ({{ value.all_day.count }})</td>
-                  <td>{{  value.step1.pay_sum }} ({{ value.step1.count }})</td>
-                  <td>{{  value.step2.pay_sum }} ({{ value.step2.count }})</td>
-                  <td>{{  value.step3.pay_sum }} ({{ value.step3.count }})</td>
+                  <td>{{  value.all_day.pay_sum|floatformat:0 }} ({{ value.all_day.count }})</td>
+                  <td>{{  value.step1.pay_sum|floatformat:0 }} ({{ value.step1.count }})</td>
+                  <td>{{  value.step2.pay_sum|floatformat:0 }} ({{ value.step2.count }})</td>
+                  <td>{{  value.step3.pay_sum|floatformat:0 }} ({{ value.step3.count }})</td>
                 </tr>
               {% endfor %}
           </tbody>
